# calibration_process

./: .gitignore  README.md  justfile  pyproject.toml
data/03B/single_process/: 20230903214108_temp_bias_fit.json  bkg_form.json  ec_energy.json  fit_range.json  temp_bias_fit.json
data/04/single_process/: 20231120140952_temp_bias_fit.json  bkg_form.json  ec_energy.json  fit_range.json
data/05B/single_process/: 20230903214245_temp_bias_fit.json  bkg_form.json  ec_energy.json  fit_range.json  time_cut.json
data/07/single_process/: 20231120143925_temp_bias_fit.json  bkg_form.json  ec_energy.json  fit_range.json  temp_bias_fit.json
data/09/single_process/: bkg_form.json  ec_energy.json  fit_range.json
data/10B/single_process/: 20250612172538_temp_bias_fit.json  bkg_form.json  fit_range.json
data/11B/single_process/: 20250616215123_temp_bias_fit.json  bkg_form.json  ec_energy.json  fit_range.json
lib_plot/: README.md  pyproject.toml
lib_plot/src/lib_plot/: __init__.py  plot.py
lib_reader/: README.md  pyproject.toml
lib_reader/src/lib_reader/: __init__.py  util.py
lib_reader/src/lib_reader/reader04/: gridBasicFunctions02.py  gridParametersCommon.py  read.py
lib_reader/src/lib_reader/reader05/: gridBasicFunctions.py  gridParametersCommon.py  my_type.py  version_lib.py
lib_reader/src/lib_reader/reader05/gridParameters/: gridParameters02.py  gridParameters03.py
lib_reader/src/lib_reader/reader05/gridProcessFunctions/: gridProcessFunctions02.py  gridProcessFunctions03.py
lib_reader/src/lib_reader/reader07/: gridBasicFunctions02.py  gridParametersCommon.py  read.py
lib_reader/src/lib_reader/reader10/: analysis_grid_data.py  grid_packet.xml  parity_check.py  parse_grid_data.py  quick_parser.ipynb  read.py  rpw_parser_hk.ipynb  tb_cut.py
lib_reader/src/lib_reader/reader11/: quick_parser.ipynb  read.py  rpw_parser_nengdao.ipynb  tb_cut.py
src/calibration_process/: __init__.py  cmd.py  config.json  ec_data_export.py  file_lib.py  fitting.py  main.py  operation.py  process.py  tb_data_export.py  util_lib.py
src/grid_calibration/: __init__.py  cmd.py  file_lib.py  operation.py  process.py  util_lib.py
src/grid_calibration/process03B/: __init__.py  ec_fit.py  ec_preprocess.py  single.py  temp_bias.py
src/grid_calibration/process04/: __init__.py  ec_preprocess.py  temp_bias.py  temp_fit.py
src/grid_calibration/process05B/: __init__.py  ec_fit.py  ec_preprocess.py
src/grid_calibration/process07/: __init__.py  ec_fit.py  ec_preprocess.py  single.py
src/grid_calibration/process10B/: __init__.py  ec_fit.py  ec_preprocess.py  temp_bias.py  temp_fit.py  test.py
tests/: test_demo.py
