[project]
name = "grid-calibration"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "wqd", email = "wqd.2019@tsinghua.org.cn" }
]
dependencies = [
    "lib_reader",
    "numpy>=1.24.4",
    "matplotlib>=3.7.2",
    "scipy>=1.10.1",
    "crc16>=0.1.1",
    "lmfit>=1.2.2",
    "nptyping>=2.5.0",
    "dill>=0.3.7",
    "fire>=0.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
main = {call = "grid_calibration.main:main", help = "Main entry point."}
tb07 = {call = "grid_calibration.process07.temp_bias"}
tbfit07 = {call = "grid_calibration.process07.temp_fit"}
[[tool.rye.sources]]
name = "tuna_source"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.rye.workspace]
members = ["*"]

