[project]
name = "calibration_process"
version = "0.1.0"
description = "calibration process for GRID"
authors = [
    { name = "wqd", email = "wqd.2019@tsinghua.org.cn" }
]
dependencies = [
    "lib_reader",
    "lib_plot",
    "numpy>=1.24.4",
    "matplotlib>=3.7.2",
    "scipy>=1.10.1",
    "crc16>=0.1.1",
    "lmfit>=1.2.2",
    "nptyping>=2.5.0",
    "dill>=0.3.7",
    "fire>=0.5.0",
    "crcmod>=1.7",
    "h5py>=3.10.0",
    "pandas>=2.0.3",
    "numba>=0.58.1",
    "addict>=2.4.0",
    "cachier>=3.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.6.1",
    "flameprof>=0.4",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "plotly>=6.1.2",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]
[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
lib_reader = { workspace = true }
lib_plot = { workspace = true }

[tool.uv.workspace]
members = ["lib_plot", "lib_reader"]


[tool.hatch.build.targets.wheel]
packages = ["src/calibration_process"]
