[project]
name = "lib-plot"
version = "0.1.0"
description = "Plot librarry for GRID calibration"
authors = [
    { name = "wqd", email = "wqd.2019@tsinghua.org.cn" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
