[project]
name = "lib-reader"
version = "0.1.0"
description = "Reader for GRID 03B, 04, 05B, 07, 10B calibration data"
authors = [
    { name = "wqd", email = "wqd.2019@tsinghua.org.cn" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
